<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<parent>
		<groupId>org.peakaboo</groupId>
		<artifactId>peakaboo</artifactId>
		<version>6.2-SNAPSHOT</version>
	</parent>
	<artifactId>libpeakaboo</artifactId>
	<packaging>jar</packaging>
	<name>libpeakaboo</name>

	<url>http://maven.apache.org</url>

	<!-- workaround for bug with maven timestamp property -->
	<!-- https://dzone.com/articles/stamping-version-number-and -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->

		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>bolt-plugin</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>plural-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>autodialog-model</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.tschoonj</groupId>
			<artifactId>xraylib</artifactId>
			<version>4.1.4</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>scratch</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>cyclops-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>druthers</artifactId>
			<version>${project.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.systemsx.cisd/sis-jhdf5-batteries_included -->
		<dependency>
			<groupId>cisd</groupId>
			<artifactId>jhdf5</artifactId>
			<version>19.04.1</version>
		</dependency>

		<!-- We pull in the latest commons-* so that various out of date references in other deps get replaced -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.18.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.5.0</version>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>jar</id>
			<url>file://${project.basedir}/repo/</url>
		</repository>
		
		<repository>
			<id>scijava-public</id>
			<url>https://maven.scijava.org/content/repositories/public/</url>
		</repository>
		
	</repositories>


	<build>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<outputDirectory>
						${project.basedir}/../
					</outputDirectory>
					<finalName>libpeakaboo-${project.version}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<archive></archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>

				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
					    --add-opens java.base/java.lang=ALL-UNNAMED
					    --add-opens java.base/java.math=ALL-UNNAMED
					    --add-opens java.base/java.util=ALL-UNNAMED
					    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
					    --add-opens java.base/java.net=ALL-UNNAMED
					    --add-opens java.base/java.text=ALL-UNNAMED
					    --add-opens java.sql/java.sql=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

		</plugins>
		<resources>
			<resource>

				<directory>${project.basedir}/src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>

	</build>


</project>
